add gitignore Страничка избранных товаров Почтовый рассыльщик (подключение к gmail.com)

--- a/shop/shop_app/templates/shop/index.html
+++ b/shop/shop_app/templates/shop/index.html
@@ -7,6 +7,7 @@
 {% block main %}
 <main>
     <!--  Modal -->
+    {% include 'shop/components/_user_messages.html' %}
     {% include 'components/_model.html' %}
     <div class="container">
         <!-- Баннер на главной странице -->
