--- a/shop/shop_app/templates/shop/components/_product_card.html
+++ b/shop/shop_app/templates/shop/components/_product_card.html
@@ -7,15 +7,16 @@
         <div class="product-overlay">
             <ul class="mb-0 list-inline">
                 {% if request.user.is_authenticated %}
-                    {% get_favorite_products request.user as fav_products %}
+                {% get_favorite_products request.user as fav_products %}
                 {% endif %}
 
                 {% if product in fav_products and request.user.is_authenticated %}
-                <li class="list-inline-item m-0 p-0"><a class="btn btn-sm btn-outline-dark" href="{% url 'add_favorite' product.slug %}"><i
-                            class="fas far fa-heart"></i></a></li>
+                <li class="list-inline-item m-0 p-0"><a class="btn btn-sm btn-outline-dark"
+                        href="{% url 'add_favorite' product.slug %}"><i class="fas far fa-heart"></i></a></li>
                 {% else %}
-                <li class="list-inline-item m-0 p-0"><a class="btn btn-sm btn-outline-dark" href="{% url 'add_favorite' product.slug %}"><i
-                            class="far fa-heart" style="color: black;"></i></a></li>
+                <li class="list-inline-item m-0 p-0"><a class="btn btn-sm btn-outline-dark"
+                        href="{% url 'add_favorite' product.slug %}"><i class="far fa-heart"
+                            style="color: black;"></i></a></li>
                 {% endif %}
                 <li class="list-inline-item m-0 p-0"><a class="btn btn-sm btn-dark" href="cart.html">Add to
                         cart</a></li>
