--- a/shop/shop_app/templates/shop/favorite_product.html
+++ b/shop/shop_app/templates/shop/favorite_product.html
@@ -12,13 +12,13 @@
             <div class="container">
                 <div class="row px-4 px-lg-5 py-lg-4 align-items-center">
                     <div class="col-lg-6">
-                        <h1 class="h2 text-uppercase mb-0">Shop</h1>
+                        <h1 class="h2 text-uppercase mb-0">Мои избранные товары</h1>
                     </div>
                     <div class="col-lg-6 text-lg-end">
                         <nav aria-label="breadcrumb">
                             <ol class="breadcrumb justify-content-lg-end mb-0 px-0 bg-light">
                                 <li class="breadcrumb-item"><a class="text-dark" href="{% url 'index' %}">Главная</a></li>
-                                <li class="breadcrumb-item active" aria-current="page">Shop</li>
+                                <li class="breadcrumb-item active" aria-current="page">избранные</li>
                             </ol>
                         </nav>
                     </div>
@@ -28,14 +28,10 @@
         <section class="py-5">
             <div class="container p-0">
                 <div class="row">
-                    <!-- SHOP SIDEBAR-->
-                    <div class="col-lg-3 order-2 order-lg-1">
-                        <h5 class="text-uppercase mb-4">Фильтры</h5>
-                        {% include 'shop/components/_sort.html' %}
-                    </div>
                     <!-- SHOP LISTING-->
                     <div class="col-lg-9 order-1 order-lg-2 mb-5 mb-lg-0">
                         <div class="row mb-3 align-items-center">
+        {% if products %}
                             <div class="col-lg-6 mb-2 mb-lg-0">
                                 <p class="text-sm text-muted mb-0">Showing 1–12 of 53 results</p>
                             </div>
@@ -47,6 +43,9 @@
                                 {% include 'shop\components\_product_card.html' %}
                             </div>
                             {% endfor %}
+        {% else %}
+                            <h2>У вас нет избранных товаров</h2>
+        {% endif %}
                         </div>
                         <!-- PAGINATION-->
                         <nav aria-label="Page navigation example">
