--- a/shop/shop_app/templates/shop/components/_product_card.html
+++ b/shop/shop_app/templates/shop/components/_product_card.html
@@ -18,8 +18,7 @@
                         href="{% url 'add_favorite' product.slug %}"><i class="far fa-heart"
                             style="color: black;"></i></a></li>
                 {% endif %}
-                <li class="list-inline-item m-0 p-0"><a class="btn btn-sm btn-dark" href="cart.html">Add to
-                        cart</a></li>
+                <li class="list-inline-item m-0 p-0"><a class="btn btn-sm btn-dark" href="{% url 'to_cart' product.pk 'add' %}">Добавить в корзину</a></li>
                 <li class="list-inline-item mr-0"><a class="btn btn-sm btn-outline-dark" href="#productView"
                         data-bs-toggle="modal"><i class="fas fa-expand"></i></a></li>
             </ul>
