--- a/shop/shop_app/templates/shop/favorite_product.html
+++ b/shop/shop_app/templates/shop/favorite_product.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %}
-{{ title }}
+Избранные товары
 {% endblock %}
 
 {% block main %}
@@ -17,7 +17,8 @@
                     <div class="col-lg-6 text-lg-end">
                         <nav aria-label="breadcrumb">
                             <ol class="breadcrumb justify-content-lg-end mb-0 px-0 bg-light">
-                                <li class="breadcrumb-item"><a class="text-dark" href="{% url 'index' %}">Главная</a></li>
+                                <li class="breadcrumb-item"><a class="text-dark" href="{% url 'index' %}">Главная</a>
+                                </li>
                                 <li class="breadcrumb-item active" aria-current="page">избранные</li>
                             </ol>
                         </nav>
@@ -31,7 +32,7 @@
                     <!-- SHOP LISTING-->
                     <div class="col-lg-9 order-1 order-lg-2 mb-5 mb-lg-0">
                         <div class="row mb-3 align-items-center">
-        {% if products %}
+                            {% if products %}
                             <div class="col-lg-6 mb-2 mb-lg-0">
                                 <p class="text-sm text-muted mb-0">Showing 1–12 of 53 results</p>
                             </div>
@@ -43,9 +44,9 @@
                                 {% include 'shop\components\_product_card.html' %}
                             </div>
                             {% endfor %}
-        {% else %}
+                            {% else %}
                             <h2>У вас нет избранных товаров</h2>
-        {% endif %}
+                            {% endif %}
                         </div>
                         <!-- PAGINATION-->
                         <nav aria-label="Page navigation example">
